--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1D0DC3694E0724399B775C9383BBAC2A
+CompanyName=404Gamestudios
+Homepage=404studios.net
 
 [StartupActions]
 bAddPacks=True
