--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,18 +1,4 @@
 [URL]
-[/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=NavigationOnly
-DefaultCursor=None
-TextEditBeamCursor=None
-CrosshairsCursor=None
-HandCursor=None
-GrabHandCursor=None
-GrabHandClosedCursor=None
-SlashedCircleCursor=None
-ApplicationScale=1.000000
-UIScaleRule=ShortestSide
-CustomScalingRuleClass=None
-UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
 r.MobileNumDynamicPointLights=4
@@ -45,7 +31,7 @@ r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
-r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.AntiAliasing=1
 r.StencilForLODDither=False
 r.EarlyZPass=3
 r.EarlyZPassMovable=False
@@ -67,7 +53,7 @@ UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Test_level.Test_level
+EditorStartupMap=/Game/Maps/Test_level2.Test_level2
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -75,9 +61,9 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Test_level.Test_level
+GameDefaultMap=/Game/Maps/Test_level2.Test_level2
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Vektroid/Vektroid.Vektroid_C
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -86,4 +72,20 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+DefaultCursor=None
+TextEditBeamCursor=None
+CrosshairsCursor=None
+HandCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
+
+[/Script/Engine.PhysicsSettings]
+bEnable2DPhysics=False
 
